--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+public/images/podcast/episode2.mp4 filter=lfs diff=lfs merge=lfs -text
+public/images/podcast/episode3.mp4 filter=lfs diff=lfs merge=lfs -text
