--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
+    "resend": "^4.5.1",
     "sonner": "^1.5.0",
     "stripe": "^18.1.0",
     "tailwind-merge": "^2.5.2",
@@ -67,6 +68,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@netlify/functions": "^3.1.8",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
