--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,36 @@
 [dev]
   targetPort = 8080
-  # port = 8888 # Netlify Dev will run on this port (e.g. http://localhost:8888)
-  # publish = "dist" # If your Vite build output is not 'dist'
-  # command = "npm run dev" # If you need to customize the dev command
+  port = 3000  # Match your development server port
+  publish = "dist"
+  command = "npm run dev"
+  framework = "#custom"
 
 [build]
   command = "npm run build"
   publish = "dist"
   functions = "netlify/functions"
 
+# Security headers
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://maps.googleapis.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' http://localhost:3000 https://*.netlify.app https://api.netlify.com; frame-src https://www.google.com;"
+
+# Handle form submissions
+[[redirects]]
+  from = "/"
+  status = 200
+  to = "/index.html"
+  force = true
+  conditions = {Role = ["bot", "crawler"]}
+
+# Handle client-side routing - must come last
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[functions]
-  directory = "netlify/functions"
+  force = true
