--- a/netlify.toml
+++ b/netlify.toml
@@ -18,7 +18,7 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://maps.googleapis.com https://storage.ko-fi.com https://ko-fi.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https:; connect-src 'self' http://localhost:3000 https://*.netlify.app https://api.netlify.com https://gnews.io https://api.gnews.io https://ko-fi.com; frame-src https://www.google.com https://www.youtube.com https://ko-fi.com;"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://maps.googleapis.com https://storage.ko-fi.com https://ko-fi.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://storage.ko-fi.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https:; connect-src 'self' http://localhost:3000 https://*.netlify.app https://api.netlify.com https://gnews.io https://api.gnews.io https://ko-fi.com; frame-src https://www.google.com https://www.youtube.com https://ko-fi.com;"
 
 # Handle form submissions
 [[redirects]]
