--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "date-fns": "^3.6.0",
         "embla-carousel-react": "^8.3.0",
         "input-otp": "^1.2.4",
+        "leaflet": "^1.9.4",
         "lucide-react": "^0.462.0",
         "newsapi": "^2.4.1",
         "next-themes": "^0.3.0",
