UX: improve homepage hero fallback, CTA banner, translations; News: switch to RSS function, add filters/pagination, robust fallbacks; SEO/Perf: preconnect + OG; Fix: category labels fallback and homepage news fallback

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "recharts": "^2.12.7",
         "remark-gfm": "^4.0.1",
         "resend": "^4.5.1",
+        "rss-parser": "^3.13.0",
         "sonner": "^1.5.0",
         "stripe": "^18.1.0",
         "tailwind-merge": "^2.5.2",
