--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@radix-ui/react-tooltip": "^1.1.4",
         "@stripe/stripe-js": "^7.3.0",
         "@tanstack/react-query": "^5.56.2",
+        "@types/react-helmet-async": "^1.0.1",
         "axios": "^1.8.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -56,6 +57,7 @@
         "react": "^18.3.1",
         "react-day-picker": "^8.10.1",
         "react-dom": "^18.3.1",
+        "react-helmet-async": "^2.0.5",
         "react-hook-form": "^7.53.0",
         "react-markdown": "^10.1.0",
         "react-resizable-panels": "^2.1.3",
