chore: hide sensitive and private files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ public/images/podcast/episode5.mp4
 
 # Local Netlify folder
 .netlify
+
+GEMINI_IMPLEMENTATION.md
+The Digital Empowerment Kit.pdf
+**/GEMINI_IMPLEMENTATION.md
+**/The Digital Empowerment Kit.pdf
