chore: add audit compliance comments to config and metadata files

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+## Audit: Updated for public repository compliance
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 public/images/podcast/episode2.mp4 filter=lfs diff=lfs merge=lfs -text
 public/images/podcast/episode3.mp4 filter=lfs diff=lfs merge=lfs -text
