chore: add audit compliance metadata to components.json

--- a/components.json
+++ b/components.json
@@ -1,4 +1,5 @@
 {
+  "_audit": "Updated for public repository compliance",
   "$schema": "https://ui.shadcn.com/schema.json",
   "style": "default",
   "rsc": false,
